Sat Jan 17 23:52:38 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/SOCK_Dgram_Test.cpp:

	  Fixed a compile error in Full_Reactor builds.

Sat Jan 17 19:38:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tests/INET_Addr_Test_IPV6.cpp:
	* tests/Proactor_Test_IPV6.cpp:
	* tests/SOCK_Send_Recv_Test_IPV6.cpp:
	  Fixed incorrect doxygen file tag.

Sat Jan 17 19:35:43 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* examples/C++NPv2/AC_CLD_export.h:
	* examples/C++NPv2/AIO_CLD_export.h:
	* examples/C++NPv2/CLD_export.h:
	* examples/C++NPv2/SLD_export.h:
	* examples/C++NPv2/SLDEX_export.h:
	* examples/C++NPv2/TPCLS_export.h:
	* examples/C++NPv2/TPLS_export.h:
          Added check for ACE_AS_STATIC_LIBS for setting the export flags for
          proper building of static libraries.

Sat Jan 17 19:19:33 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ASNMP/asnmp/ASNMP_Export.h:
          Added check for ACE_AS_STATIC_LIBS for setting the export flags for
          proper building of static libraries.

	* ASNMP/asnmp/ctr64.cpp:
	* ASNMP/asnmp/ctr64.h:
	  Changed unsigned long long to ACE_UINT64

	* ASNMP/asnmp/address.h:
	* ASNMP/asnmp/octet.h:
	* ASNMP/asnmp/oid.h:
	* ASNMP/asnmp/pdu.h:
	* ASNMP/asnmp/vb.h:
	  Added missing ASNMP_Export macro.

	  This fixes several build problems on Win32. Thanks to
          Michelangelo Nottoli <m.nottoli@acsys.it> for reporting this
	  and supplying the ideas how to fix this.

Sat Jan 17 18:43:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* bin/msvc_static_compile.pl:
	* bin/msvc_static_order.lst:
	  When using static projects we cannot use the dependencies between
	  different libraries. Therefor we have to explicitly define the
	  build order. The existing msvc_auto_compile.pl script was getting
	  to complex, so added a new msvc_static_compile.pl script that will
	  be used for building statically. In the msvc_static_order.lst the
	  order of building can be specified.
